tools/hermes/tests/fixtures/broken_doc_block/expected.stderr

=== Hermes Verification Failed ===

[Hermes Error] hermes::doc_block

  × Documentation block error: Unclosed Hermes block in documentation.
   ╭─[[PROJECT_ROOT]/src/lib.rs:1:1]
 1 │ /// ```lean, hermes
   · ─────────┬─────────
   ·          ╰── problematic block
 2 │ /// context:
   ╰────

Error: Aborting due to 1 previous errors.
